wip: initial checkbox align fixes

--- a/github.user.styl
+++ b/github.user.styl
@@ -1158,6 +1158,40 @@ regexp('https?://render\.githubusercontent?.com(/.*)?') {
                 }
             }
         }
+
+        // Fix checkbox on org people header alignment
+        // https://github.com/orgs/:org/people/pending_invitations
+        #select-all-checkbox {
+            vertical-align: super
+        }
+        label[for="select-all-checkbox"] {
+            margin-top: -.05rem
+        }
+        [data-bulk-actions-parameter="pending_collaborator_invitation_ids"] {
+            label[for="select-all-checkbox"] {
+                margin-top: -.11rem
+            }
+        }
+        [data-bulk-actions-parameter="outside_collaborator_ids"] {
+            label[for="select-all-checkbox"] {
+                margin-top: -.1rem
+                margin-left: .11rem
+            }
+        }
+        [data-bulk-actions-parameter="invitation_ids"] {
+            input[id="select-all-pending"] {
+                vertical-align: middle
+                margin-top: -.11rem
+            }
+            label[for="select-all-pending"] {
+                margin-left: -.4rem
+                margin-top: -.05rem
+            }
+        }
+        #org-members-table {
+            input#select-all-checkbox { margin-top: .6rem }
+            label[for="select-all-checkbox"] span { margin-left: -.5rem }
+        }
     }
 
     // Fix border-color (not using css vars upstream) https://github.com/settings/keys
